working on editing stuff

--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -7,6 +7,6 @@
     <input name = "title" type="text" placeholder='Title'>
     <input name = "tags" type="text" placeholder='Tags'>
     <br>
-    <input name = "content" type="text" >
+    <textarea id="content" name="content" rows="10" cols="100"></textarea>
   </form>
 {% endblock content %}
