--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -7,13 +7,11 @@
   <form class="form-group formBorder small-10 small-offset-1" method="post">
     <input class="textInput" name="title" type="text" placeholder='Title'>
     <br>
-<<<<<<< HEAD
-    <textarea id="content" name="content" rows="10" cols="100"></textarea>
-=======
+    <!-- <textarea id="content" name="content" rows="10" cols="100"></textarea> -->
     <input class="textInput" name="tags" type="text" placeholder='Tags'>
     <br>
+    <textarea id="content" name="content" rows="10" cols="100"></textarea>
     <input class="expanded button" type="submit" value="Submit">
->>>>>>> 2847720ef812af115edb75a0b1348908f0aa8014
   </form>
 </div>
 {% endblock content %}
