changed some front end bugs

--- a/templates/post.html
+++ b/templates/post.html
@@ -45,12 +45,11 @@
         {%else %}
           <strong class="small-6">{{comment.author}}</strong>
         {% endif %}
-        <span class="small-6" style="float:right;margin-right:50px">{{comment.time_created}}</span>
       </div>
       <div class="small-12">
         <br>
       </div>
-      <div class="small-12" id='content' style="word-wrap: break-word;">{{comment.content}} </div>
+      <div class="small-12" id='content' style="word-wrap: break-word;">{{comment.content}} <span style="float:right;margin-right:50px">{{comment.time_created}}</span></div>
       <div class="small-4 upvote" id="{{comment.id}}" style="margin-left:85%;width:5%">
         <h4 class="upvote" id="{{comment.id}}">⬆️</h4>
       </div>
