Add private QAFs

--- a/templates/create_qaf.html
+++ b/templates/create_qaf.html
@@ -6,6 +6,11 @@
   <form class="form-group formBorder small-10 small-offset-1" method="post">
     <input class="textInput" name="name" type="text" placeholder='Name'>
     <br>
+    <select class="textInput" name="mode">
+      <option value="public">Public QAF</option>
+      <option value="private">Private QAF</option>
+    </select>
+    <br>
     <input class="expanded button"type="submit" value="Submit">
   </form>
 </div>
