add API functionality, and update README with API notes

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -111,6 +111,10 @@ label {
   border-width: thin;
   background-color: RGB(253, 211, 158);
 }
+.quote {
+  font-family: cursive;
+  text-align: center;
+}
 /* #thumbnail-container {
   padding: auto;
 } */
