--- a/templates/home.html
+++ b/templates/home.html
@@ -11,6 +11,9 @@
       {% endif %}
   {% endwith %}
 <div class="grid-x">
+  <div class="quote small-12 grid-x">
+    <p class="quote small-10 small-offset-1">{{quote}} - <i>{{author}}</i></p>
+  </div>
   <div class="formBorder small-10 small-offset-1">
     <h3>Discover Your New QAF:</h3>
     <input class="textInput" type="text" id="qafsearch" name="search" placeholder="Search">
